Fixing width of status span to be large enough for 'active' to reduce jump in nav bar when switching

--- a/web/assets/stylesheets/application.css
+++ b/web/assets/stylesheets/application.css
@@ -202,6 +202,8 @@ table .table-checkbox label {
 
 .navbar .navbar-brand .status {
   color: #585454;
+  display: inline-block;
+  width: 75px;
 }
 
 
